force-app/main/default/objects/Incidental_Data__c/Incidental_Data__c.object-meta.xml
<CustomObject>
    <label>Incidental Data</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>INCDID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidental Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>