force-app/main/default/objects/Incidental_Data__c/fields/Antecedent__c.field-meta.xml
<CustomField>
    <fullName>Antecedent__c</fullName>
    <label>Antecedent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>