force-app/main/default/objects/Incidental_Data__c/fields/Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Behaviour__c</fullName>
    <label>Behaviour</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>