force-app/main/default/objects/Incidental_Data__c/fields/Consequence__c.field-meta.xml
<CustomField>
    <fullName>Consequence__c</fullName>
    <label>Consequence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>