force-app/main/default/objects/Incidental_Data__c/fields/Duration_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hrs__c</fullName>
    <label>Hrs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>