force-app/main/default/objects/Incidental_Data__c/fields/Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_Mins__c</fullName>
    <label>Mins</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>