force-app/main/default/objects/Incidental_Data__c/fields/Duration_Secs__c.field-meta.xml
<CustomField>
    <fullName>Duration_Secs__c</fullName>
    <label>Secs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>