force-app/main/default/objects/Incidental_Data__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toileting</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Behaviours of Concern</fullName>
            </value>
            <value>
                <fullName>Self Stimulatory</fullName>
            </value>
            <value>
                <fullName>Reinforcement Development</fullName>
            </value>
            <value>
                <fullName>Play Development</fullName>
            </value>
            <value>
                <fullName>Tolerance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>