force-app/main/default/objects/Incidental_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration_Hrs__c</columns>
    <columns>Incident_Type__c</columns>
    <columns>Intensity__c</columns>
    <columns>Duration_Mins__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Duration_Secs__c</columns>
    <columns>Session__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>